--- a/assets/sass/blocks/_header.scss
+++ b/assets/sass/blocks/_header.scss
@@ -16,16 +16,18 @@
         z-index: 10;
         background: $titleBackground;
 
-        padding: 20px 10px;
 
         border-radius: 0 0 10px 0;
+        padding: 13px 5px;
         overflow: hidden;
 
         @media screen and (min-width: 640px) and (max-width: 1024px) {
             width: 75%;
+            padding: 16px 10px;
         }
         @media screen and (min-width: 1025px) {
             width: 85%;
+            padding: 16px 10px;
         }
 
         &::after {
@@ -35,7 +37,7 @@
             width: 30px;
             height: 100%;
             top: -15px;
-            right: -20px;
+            right: -22px;
             transform: rotate(-20deg);
             background: $logoBackground;
         }
@@ -44,8 +46,18 @@
             margin: 0;
             padding: 0;
 
-            font-size: 24px;
+            font-size: 16px;
             color: #fff;
+
+            @media screen and (min-width: 640px) and (max-width: 1024px) {
+                width: 30%;
+                font-size: 22px;
+            }
+            @media screen and (min-width: 1025px) {
+                width: 20%;
+                font-size: 24px;
+            }
+    
         }
     }
 
@@ -73,9 +85,9 @@
 
         &::after {
             content: "";
-            position: absolute;
+            position: absolute;    
             top: -16px;
-            left: -15px;
+            left: -4%;
             background: $logoBackground;
             width: 30px;
             height: 100%;
