--- a/assets/sass/elements/_typography.scss
+++ b/assets/sass/elements/_typography.scss
@@ -21,6 +21,7 @@ $menu_line-height: 22px;
 h1, h2, h3, h4, h5, h6, h1.hero-title {
     color: $titleFontColor;
     font-family: $fontFamilyOne;
+    font-weight: 900;
 
     a {
         color: $titleFontColor;
