--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -23,7 +23,7 @@ Tags: one-column, two-columns, full-width-template, e-commerce
 //@import "core/flexbox";
 
 // PLUG-INs
-//@import "plugins/font-awesome/font-awesome";
+@import "plugins/font-awesome/font-awesome";
 @import "plugins/plug-ins";
 @import "plugins/slick";
 
@@ -86,7 +86,7 @@ html {
 
 html,
 body {
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
@@ -104,10 +104,6 @@ body {
     position: relative;
     overflow-x: hidden;
     min-height: 100%;
-
-    @media #{$mobile} {
-        padding-top: 80px;
-    }
 }
 
 strong,
