--- a/assets/sass/core/_variables.scss
+++ b/assets/sass/core/_variables.scss
@@ -7,7 +7,7 @@ $shadow: 0 0 10px rgba(#000, .2);
 
 // BRAND
 $themeColorOne: #2c3e50; // header, menu, footer, title,
-$themeColorTwo: #e74c3c; // menu active item, button, footer link hover, woo
+$themeColorTwo: #fcb22a; // menu active item, button, footer link hover, woo
 $themeColorThree: #3498db; // preHeader bg, wooOnSale
 $themeColorFour: #2980b9; //menu hover item, table border, preHeader font
 
@@ -128,8 +128,8 @@ $productsPriceFontColor: $wooThemeColor;
 $productPriceFontColor: $wooThemeColor;
 
 // error
-$errorBorderTopColor: #b81c23;
-$errorIconFontColor: #b81c23;
+$errorBorderTopColor: #fcb22a;
+$errorIconFontColor: #fcb22a;
 
 // info
 $infoBorderTopColor: #1e85be;
