--- a/style.css
+++ b/style.css
@@ -324,12 +324,12 @@ em {
   list-style: none; }
 
 .brand-color {
-  color: #e74c3c; }
+  color: #fcb22a; }
 
 .highlighted {
   display: inline-block;
   padding: 5px 15px;
-  background-color: #e74c3c; }
+  background-color: #fcb22a; }
   .highlighted,
   .highlighted a {
     color: #fff; }
@@ -6991,7 +6991,7 @@ caption {
   border-top: 2px solid #fff; }
 
 .table .table {
-  background-color: #e74c3c; }
+  background-color: #fcb22a; }
 
 .table-condensed > thead > tr > th,
 .table-condensed > tbody > tr > th,
@@ -7021,11 +7021,11 @@ caption {
   color: #fff; }
 
 .table-striped > tbody > tr:nth-of-type(even) {
-  background-color: #e74c3c;
+  background-color: #fcb22a;
   color: #fff; }
 
 .table-hover > tbody > tr:hover {
-  background-color: #ed7669; }
+  background-color: #fdc45c; }
 
 table col[class*="col-"] {
   position: static;
@@ -7484,7 +7484,7 @@ form fieldset {
     vertical-align: middle;
     border: 0;
     border-radius: 0px;
-    background-color: #e74c3c;
+    background-color: #fcb22a;
     color: #fff;
     text-transform: uppercase;
     text-align: center;
@@ -7500,11 +7500,11 @@ form fieldset {
       font-family: 'Font Awesome 5 Pro'; }
     form fieldset [type="submit"]:hover {
       color: #fff;
-      background-color: #d62c1a;
+      background-color: #f09c03;
       -webkit-box-shadow: none;
       box-shadow: none; }
     form fieldset [type="submit"]:active {
-      background-color: #e74c3c;
+      background-color: #fcb22a;
       -webkit-box-shadow: none;
       box-shadow: none; }
     form fieldset [type="submit"]:focus {
@@ -7528,7 +7528,7 @@ form fieldset {
   .form-inline input {
     width: calc(100% - 40px); }
     .form-inline input:focus {
-      border: 1px solid #e74c3c; }
+      border: 1px solid #fcb22a; }
 
 #commentform {
   background-color: #fdfdfe;
@@ -7560,12 +7560,12 @@ form fieldset {
   height: auto;
   cursor: pointer;
   font-size: 16px;
-  border: 1px solid #e74c3c;
+  border: 1px solid #fcb22a;
   background-color: transparent;
   -webkit-box-shadow: none;
   box-shadow: none;
   line-height: 1 !important;
-  color: #e74c3c;
+  color: #fcb22a;
   -webkit-transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   -o-transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out; }
@@ -7578,13 +7578,13 @@ form fieldset {
   .button-style:focus {
     outline: 0; }
   .button-style.button-inverse {
-    background: #e74c3c;
+    background: #fcb22a;
     color: #fff; }
     .button-style.button-inverse:hover, .button-style.button-inverse:active {
-      color: #e74c3c;
+      color: #fcb22a;
       background: transparent; }
   .button-style:hover, .button-style:active {
-    background-color: #e74c3c;
+    background-color: #fcb22a;
     color: #fff; }
 
 .button-large,
@@ -7599,12 +7599,12 @@ a.button {
   height: auto;
   cursor: pointer;
   font-size: 16px;
-  border: 1px solid #e74c3c;
+  border: 1px solid #fcb22a;
   background-color: transparent;
   -webkit-box-shadow: none;
   box-shadow: none;
   line-height: 1 !important;
-  color: #e74c3c;
+  color: #fcb22a;
   -webkit-transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   -o-transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
@@ -7627,21 +7627,21 @@ a.button {
   .button-large.button-inverse,
   button.button.button-inverse,
   a.button.button-inverse {
-    background: #e74c3c;
+    background: #fcb22a;
     color: #fff; }
     .button-large.button-inverse:hover, .button-large.button-inverse:active,
     button.button.button-inverse:hover,
     button.button.button-inverse:active,
     a.button.button-inverse:hover,
     a.button.button-inverse:active {
-      color: #e74c3c;
+      color: #fcb22a;
       background: transparent; }
   .button-large:hover, .button-large:active,
   button.button:hover,
   button.button:active,
   a.button:hover,
   a.button:active {
-    background-color: #e74c3c;
+    background-color: #fcb22a;
     color: #fff; }
 
 .button-medium {
@@ -7654,12 +7654,12 @@ a.button {
   height: auto;
   cursor: pointer;
   font-size: 16px;
-  border: 1px solid #e74c3c;
+  border: 1px solid #fcb22a;
   background-color: transparent;
   -webkit-box-shadow: none;
   box-shadow: none;
   line-height: 1 !important;
-  color: #e74c3c;
+  color: #fcb22a;
   -webkit-transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   -o-transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
@@ -7674,13 +7674,13 @@ a.button {
   .button-medium:focus {
     outline: 0; }
   .button-medium.button-inverse {
-    background: #e74c3c;
+    background: #fcb22a;
     color: #fff; }
     .button-medium.button-inverse:hover, .button-medium.button-inverse:active {
-      color: #e74c3c;
+      color: #fcb22a;
       background: transparent; }
   .button-medium:hover, .button-medium:active {
-    background-color: #e74c3c;
+    background-color: #fcb22a;
     color: #fff; }
 
 .button-small {
@@ -7693,12 +7693,12 @@ a.button {
   height: auto;
   cursor: pointer;
   font-size: 16px;
-  border: 1px solid #e74c3c;
+  border: 1px solid #fcb22a;
   background-color: transparent;
   -webkit-box-shadow: none;
   box-shadow: none;
   line-height: 1 !important;
-  color: #e74c3c;
+  color: #fcb22a;
   -webkit-transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   -o-transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
@@ -7713,13 +7713,13 @@ a.button {
   .button-small:focus {
     outline: 0; }
   .button-small.button-inverse {
-    background: #e74c3c;
+    background: #fcb22a;
     color: #fff; }
     .button-small.button-inverse:hover, .button-small.button-inverse:active {
-      color: #e74c3c;
+      color: #fcb22a;
       background: transparent; }
   .button-small:hover, .button-small:active {
-    background-color: #e74c3c;
+    background-color: #fcb22a;
     color: #fff; }
 
 [type="submit"] {
@@ -7732,12 +7732,12 @@ a.button {
   height: auto;
   cursor: pointer;
   font-size: 16px;
-  border: 1px solid #e74c3c;
+  border: 1px solid #fcb22a;
   background-color: transparent;
   -webkit-box-shadow: none;
   box-shadow: none;
   line-height: 1 !important;
-  color: #e74c3c;
+  color: #fcb22a;
   -webkit-transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   -o-transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
@@ -7751,13 +7751,13 @@ a.button {
   [type="submit"]:focus {
     outline: 0; }
   [type="submit"].button-inverse {
-    background: #e74c3c;
+    background: #fcb22a;
     color: #fff; }
     [type="submit"].button-inverse:hover, [type="submit"].button-inverse:active {
-      color: #e74c3c;
+      color: #fcb22a;
       background: transparent; }
   [type="submit"]:hover, [type="submit"]:active {
-    background-color: #e74c3c;
+    background-color: #fcb22a;
     color: #fff; }
 
 @media (max-width: 544px) {
@@ -7868,12 +7868,12 @@ ul.pagination {
       border-bottom: 1px solid silver;
       border-right: 1px solid silver; }
     ul.pagination li.page-item a.page-link:hover {
-      background-color: #e74c3c;
+      background-color: #fcb22a;
       color: #fff;
       border-color: transparent; }
     ul.pagination li.page-item span.current {
       color: #fff;
-      background-color: #e74c3c;
+      background-color: #fcb22a;
       border-color: transparent; }
 
 table {
@@ -8039,7 +8039,7 @@ hr.style-three {
   box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5); }
 
 .fa {
-  color: #e74c3c; }
+  color: #fcb22a; }
   .fa:hover {
     color: #fff; }
 
@@ -8060,7 +8060,7 @@ a:hover .fa {
     width: 0;
     height: 0; }
   ::-webkit-scrollbar-thumb {
-    background: #e74c3c;
+    background: #fcb22a;
     border: 0 none #fff;
     border-radius: 0; }
   ::-webkit-scrollbar-thumb:hover {
@@ -8316,7 +8316,7 @@ a:hover .fa {
         -o-transition: border-color .3s ease-in-out;
         transition: border-color .3s ease-in-out; }
     .no-touch .nav .sub-menu-item:hover > .sub-menu-link, .nav .sub-menu-item-current > .sub-menu-link {
-      background-color: #e74c3c;
+      background-color: #fcb22a;
       color: #fff; }
     .no-touch .nav .sub-menu-item:hover > .sub-menu {
       display: block;
@@ -8344,8 +8344,8 @@ a:hover .fa {
   transition: .2s ease-out; }
   .hamburger:focus {
     outline: 0;
-    -webkit-box-shadow: 0 0 0 4px rgba(231, 76, 60, 0.2);
-    box-shadow: 0 0 0 4px rgba(231, 76, 60, 0.2); }
+    -webkit-box-shadow: 0 0 0 4px rgba(252, 178, 42, 0.2);
+    box-shadow: 0 0 0 4px rgba(252, 178, 42, 0.2); }
   .hamburger, .hamburger[type="button"] {
     cursor: pointer;
     border: 0;
@@ -8412,7 +8412,7 @@ a:hover .fa {
     top: 0;
     left: 0;
     border-bottom: 1px solid #e7e7e7;
-    background-color: #e74c3c;
+    background-color: #fcb22a;
     text-align: left;
     z-index: 99; }
     .nav-mobile-header img {
@@ -8435,7 +8435,7 @@ a:hover .fa {
     margin: 0;
     z-index: 100;
     overflow: auto;
-    background-color: #e74c3c;
+    background-color: #fcb22a;
     will-change: transform;
     -webkit-transform: translateX(100%);
     -ms-transform: translateX(100%);
@@ -8501,7 +8501,7 @@ a:hover .fa {
       width: auto;
       display: none;
       visibility: visible;
-      background-color: #ed7669;
+      background-color: #fdc45c;
       opacity: 1;
       -webkit-box-shadow: none;
       box-shadow: none;
@@ -8532,7 +8532,7 @@ a:hover .fa {
     z-index: 1;
     width: 20px;
     height: 20px;
-    border: 1px solid #ed7669;
+    border: 1px solid #fdc45c;
     border-radius: 50%; }
     .sidebar .widget_nav_menu .trigger::before, .sidebar .widget_nav_menu .trigger::after {
       content: '';
@@ -8542,7 +8542,7 @@ a:hover .fa {
       right: 0;
       bottom: 0;
       margin: auto;
-      background-color: #ed7669; }
+      background-color: #fdc45c; }
     .sidebar .widget_nav_menu .trigger::before {
       width: 10px;
       height: 2px; }
@@ -8558,7 +8558,7 @@ a:hover .fa {
     .sidebar .widget_nav_menu .menu .menu-item a, .sidebar .widget_nav_menu .menu .menu-item span {
       margin-bottom: 4px;
       display: block;
-      border-bottom: 1px solid #f8c9c4;
+      border-bottom: 1px solid #fee9c1;
       padding-bottom: 4px;
       font-size: 14px;
       text-decoration: none; }
@@ -8574,7 +8574,7 @@ a:hover .fa {
         display: block;
         padding: 0 7px 0 0;
         font-family: 'Font Awesome 5 Pro';
-        color: #e74c3c;
+        color: #fcb22a;
         float: left;
         margin-left: 5px;
         font-size: 10px; }
@@ -8732,7 +8732,7 @@ a:hover .fa {
             font-size: 16px; } }
 
 ::selection {
-  background-color: #e74c3c;
+  background-color: #fcb22a;
   color: #fff;
   text-shadow: none; }
 
