--- a/assets/sass/plugins/font-awesome/_brands.scss
+++ b/assets/sass/plugins/font-awesome/_brands.scss
@@ -13,6 +13,7 @@
   url('#{$fa-font-path}/fa-brands-400.svg#fontawesome') format('svg');
 }
 
-.fab {
+.fab,
+.fa {
   font-family: 'Font Awesome 5 Brands';
 }
